added commands not in 2.6

--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "source "
+    "# ADD COMMAND TO LOAD GROMACS AND PLUMED ON PSC SYSTEM"
    ]
   },
   {
@@ -848,9 +848,11 @@
    "outputs": [],
    "source": [
     "fes_stride=500\n",
-    "for i, f in enumerate(glob.glob(\"fes-stride-500/fes.stride-*\")):\n",
+    "num_fesfile=len(glob.glob(\"fes-stride-500/fes.stride-*\"))\n",
+    "for i in range(num_fesfile):  \n",
+    "    if i == num_fesfile-1: continue\n",
     "    time=(i+1)*fes_stride\n",
-    "    fes=np.loadtxt(f)\n",
+    "    fes=np.loadtxt(\"fes-stride-500/fes.stride-{}.dat\".format(i))\n",
     "    plt.plot(fes[:,0],fes[:,1]/kBT,'-',label=\"{:4d} ps\".format(time))    \n",
     "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
     "plt.ylabel(\"Free Energy [kBT]\")\n",
@@ -1020,7 +1022,7 @@
     "  LABEL=hg_dist\n",
     "... HISTOGRAM\n",
     "\n",
-    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 MINTOZERO\n",
+    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 \n",
     "DUMPGRID GRID=fes_dist FILE=fes-reweight/fes-reweight.dist.data FMT=%24.16e\n",
     "EOF"
    ]
@@ -1040,7 +1042,7 @@
     "    subprocess.run(\"./trim-colvar-file.py --colvar-file colvar.data --output-file fes-reweight/colvar_reweight.data --time-min {0}\".format(i).split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
     "    subprocess.run(\"plumed driver --plumed fes-reweight/plumed_reweight.dat --noatoms\".split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
     "    fes_data=np.loadtxt(\"fes-reweight/fes-reweight.dist.data\")\n",
-    "    plt.plot(fes_data[:,0],fes_data[:,1]/kBT,label=\"Trim {} ps\".format(i))\n",
+    "    plt.plot(fes_data[:,0],(fes_data[:,1]-np.min(fes_data[:,1]))/kBT,label=\"Trim {} ps\".format(i))\n",
     "    plt.xlabel(\"Na-Cl distance [nm]\")  \n",
     "    plt.ylabel(\"Free Energy [kBT]\")\n",
     "    plt.title(\"Reweighted FES\")\n",
@@ -1073,7 +1075,7 @@
     "fes_reweight=np.loadtxt(\"fes-reweight/fes-reweight.dist.data\")\n",
     "fes_sumhills=np.loadtxt(\"fes/fes.mintozero.data\")\n",
     "\n",
-    "plt.plot(fes_reweight[:,0],fes_reweight[:,1]/kBT,'-',label=\"Reweighted\")\n",
+    "plt.plot(fes_reweight[:,0],(fes_reweight[:,1]-np.min(fes_reweight[:,1]))/kBT,'-',label=\"Reweighted\")\n",
     "plt.plot(fes_sumhills[:,0],fes_sumhills[:,1]/kBT,'-',label=\"From bias potential\")\n",
     "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
     "plt.ylabel(\"Free Energy [kBT]\")\n"
@@ -1114,7 +1116,7 @@
     "  LABEL=hg_dist_coord\n",
     "... HISTOGRAM\n",
     "\n",
-    "fes_dist_coord: CONVERT_TO_FES GRID=hg_dist_coord TEMP=300 MINTOZERO\n",
+    "fes_dist_coord: CONVERT_TO_FES GRID=hg_dist_coord TEMP=300 \n",
     "DUMPGRID GRID=fes_dist_coord FILE=fes-reweight/fes-reweight.dist-coord.data FMT=%24.16e\n",
     "EOF"
    ]
@@ -1140,7 +1142,7 @@
     "fes_data = np.loadtxt(\"./fes-reweight/fes-reweight.dist-coord.data\")\n",
     "distance = fes_data[:,0].reshape(201,201)\n",
     "coord =    fes_data[:,1].reshape(201,201)\n",
-    "fes_2d =   fes_data[:,2].reshape(201,201)\n",
+    "fes_2d =   fes_data[:,2].reshape(201,201)-np.min(fes_data[:,2].reshape(201,201))\n",
     "from matplotlib import cm\n",
     "plt.contourf(distance,coord,fes_2d/kBT, levels=np.linspace(0,10,101), cmap=cm.jet)\n",
     "plt.xlabel(\"Na-Cl distance [nm]\")\n",
@@ -1414,7 +1416,7 @@
     "  LABEL=hg_dist\n",
     "... HISTOGRAM\n",
     "\n",
-    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 MINTOZERO\n",
+    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 \n",
     "DUMPGRID GRID=fes_dist FILE=fes-reweight/fes-reweight.dist.data FMT=%24.16e\n",
     "EOF"
    ]
@@ -1444,9 +1446,9 @@
     "fes_reweight_ex4=np.loadtxt(\"fes-reweight/fes-reweight.dist.data\")\n",
     "fes_sumhills_ex4=np.loadtxt(\"fes/fes.dist.data\")\n",
     "\n",
-    "plt.plot(fes_reweight_ex2[:,0],fes_reweight_ex2[:,1]/kBT,'-',label=\"Biasing 1 CV - Reweighted\")\n",
+    "plt.plot(fes_reweight_ex2[:,0],(fes_reweight_ex2[:,1]-np.min(fes_reweight_ex2[:,1]))/kBT,'-',label=\"Biasing 1 CV - Reweighted\")\n",
     "plt.plot(fes_sumhills_ex2[:,0],fes_sumhills_ex2[:,1]/kBT,'-',label=\"Biasing 1 CV - From bias potential\")\n",
-    "plt.plot(fes_reweight_ex4[:,0],fes_reweight_ex4[:,1]/kBT,'-',label=\"Biasing 2 CV - Reweighted\")\n",
+    "plt.plot(fes_reweight_ex4[:,0],(fes_reweight_ex4[:,1]-np.min(fes_reweight_ex4[:,1]))/kBT,'-',label=\"Biasing 2 CV - Reweighted\")\n",
     "plt.plot(fes_sumhills_ex4[:,0],fes_sumhills_ex4[:,1]/kBT,'-',label=\"Biasing 2 CV - From bias potential\")\n",
     "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
     "plt.ylabel(\"Free Energy [kBT]\")\n",
@@ -1459,7 +1461,18 @@
    "id": "1821688e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fes_data = np.loadtxt(\"./fes/fes.dist-coord.data\")\n",
+    "distance = fes_data[:,0].reshape(201,201)\n",
+    "coord =    fes_data[:,1].reshape(201,201)\n",
+    "fes_2d =   fes_data[:,2].reshape(201,201)-np.min(fes_data[:,2].reshape(201,201))\n",
+    "from matplotlib import cm\n",
+    "plt.contourf(distance,coord,fes_2d/kBT, levels=np.linspace(0,10,101), cmap=cm.jet)\n",
+    "plt.xlabel(\"Na-Cl distance [nm]\")\n",
+    "plt.ylabel(\"Solvation of Na\")\n",
+    "plt.title(\"FES - Reweighting\")\n",
+    "plt.colorbar(label=\"Free Energy [kBT]\", ticks=range(0,11))"
+   ]
   }
  ],
  "metadata": {
