added wall and other issues

--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -283,7 +283,13 @@
     "  NL_STRIDE=10\n",
     "... COORDINATION\n",
     "\n",
-    "PRINT ARG=dist,coord FILE=colvar.data STRIDE=250\n",
+    "uwall: UPPER_WALLS ...\n",
+    "   ARG=dist \n",
+    "   AT=0.6\n",
+    "   KAPPA=4000.0 \n",
+    "...\n",
+    "\n",
+    "PRINT ARG=dist,coord,uwall.* FILE=colvar.data STRIDE=250\n",
     "EOF"
    ]
   },
@@ -453,7 +459,7 @@
     "time = colvar_data[:,0]\n",
     "dist = colvar_data[:,1]\n",
     "\n",
-    "dist_separate=0.35\n",
+    "dist_separate=0.36\n",
     "dist_assoc=   dist[dist<dist_separate]\n",
     "dist_dissoc=  dist[dist>dist_separate]\n",
     "time_assoc=   time[dist<dist_separate]\n",
@@ -671,6 +677,12 @@
     "  NL_STRIDE=10\n",
     "... COORDINATION\n",
     "\n",
+    "uwall: UPPER_WALLS ...\n",
+    "   ARG=dist \n",
+    "   AT=0.6\n",
+    "   KAPPA=4000.0 \n",
+    "...\n",
+    "\n",
     "METAD ...\n",
     "  LABEL=mtd\n",
     "  ARG=dist\n",
@@ -679,12 +691,12 @@
     "  HEIGHT=1.25\n",
     "  BIASFACTOR=5\n",
     "  GRID_MIN=0.0\n",
-    "  GRID_MAX=1.5\n",
+    "  GRID_MAX=1.0\n",
     "  CALC_RCT\n",
     "  FILE=hills.data\n",
     "... METAD\n",
     "\n",
-    "PRINT ARG=dist,coord,mtd.* FILE=colvar.data STRIDE=250\n",
+    "PRINT ARG=dist,coord,mtd.*,uwall.* FILE=colvar.data STRIDE=250\n",
     "EOF"
    ]
   },
@@ -857,8 +869,8 @@
     "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
     "plt.ylabel(\"Free Energy [kBT]\")\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "plt.ylim([0,20])"
+    "plt.ylim([0,20])\n",
+    "plt.show()"
    ]
   },
   {
@@ -1016,7 +1028,7 @@
     "HISTOGRAM ...\n",
     "  ARG=dist\n",
     "  GRID_MIN=0.2\n",
-    "  GRID_MAX=1.5\n",
+    "  GRID_MAX=0.9\n",
     "  GRID_BIN=100\n",
     "  KERNEL=DISCRETE\n",
     "  LOGWEIGHTS=weights\n",
@@ -1264,6 +1276,12 @@
     "  NL_STRIDE=10\n",
     "... COORDINATION\n",
     "\n",
+    "uwall: UPPER_WALLS ...\n",
+    "   ARG=dist \n",
+    "   AT=0.6\n",
+    "   KAPPA=4000.0 \n",
+    "...\n",
+    "\n",
     "METAD ...\n",
     "  LABEL=mtd\n",
     "  ARG=dist,coord\n",
@@ -1272,12 +1290,12 @@
     "  HEIGHT=1.25\n",
     "  BIASFACTOR=5\n",
     "  GRID_MIN=0.0,2.0\n",
-    "  GRID_MAX=1.5,9.0\n",
+    "  GRID_MAX=1.0,9.0\n",
     "  CALC_RCT\n",
     "  FILE=hills.data\n",
     "... METAD\n",
     "\n",
-    "PRINT ARG=dist,coord,mtd.* FILE=colvar.data STRIDE=250\n",
+    "PRINT ARG=dist,coord,mtd.*,uwall.* FILE=colvar.data STRIDE=250\n",
     "EOF"
    ]
   },
@@ -1413,7 +1431,7 @@
     "HISTOGRAM ...\n",
     "  ARG=dist\n",
     "  GRID_MIN=0.2\n",
-    "  GRID_MAX=1.5\n",
+    "  GRID_MAX=0.9\n",
     "  GRID_BIN=100\n",
     "  KERNEL=DISCRETE\n",
     "  LOGWEIGHTS=weights\n",
@@ -1463,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18fa3bec",
+   "id": "d68fe6e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21d3d67",
+   "id": "8a1fc8a1",
    "metadata": {},
    "outputs": [],
    "source": []
