updates to notebook

--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# ADD COMMAND TO LOAD GROMACS AND PLUMED ON PSC SYSTEM"
+    "bash /ocean/projects/see220002p/shared/icomse-setup.sh"
    ]
   },
   {
@@ -52,6 +52,21 @@
    "source": [
     "home_dir=os.getcwd()\n",
     "print(home_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "975997c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# delete any previous exercise files\n",
+    "rm -rf Exercise-1\n",
+    "rm -rf Exercise-2\n",
+    "rm -rf Exercise-3\n",
+    "rm -rf Exercise-4\n"
    ]
   },
   {
@@ -88,7 +103,7 @@
     "...\n",
     "</code>\n",
     "\n",
-    "Here we are using a rational switching function that measures the coordiation number in a smooth way. See the manual for __[COORDINATION](https://www.plumed.org/doc-v2.8/user-doc/html/_c_o_o_r_d_i_n_a_t_i_o_n.html)__ for further information. "
+    "Here we are using a rational switching function that measures the coordiation number in a smooth way. The atom defined in `GROUPA=322` is the Na while `GROUPB=1-321:3` selects the oxygen atoms of the water molecules (`:3` means that we select every third atom in the sequence `1-321`, that is `1,4,7,...`. See the manual for __[COORDINATION](https://www.plumed.org/doc-v2.8/user-doc/html/_c_o_o_r_d_i_n_a_t_i_o_n.html)__ for further information. "
    ]
   },
   {
@@ -112,7 +127,7 @@
     "\n",
     "In this exercise we will perform an unbiased simulations of the system and monitor the two CVs defined above.\n",
     "\n",
-    "We start copying the files from `Exercise-X` to new folder `Exercise-1` where we will perform the simulation. "
+    "We start copying the files from `Template-Exercise-X` to new folder `Exercise-1` where we will perform the simulation. "
    ]
   },
   {
@@ -122,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp -r Exercise-X/ Exercise-1 "
+    "%cp -r Template-Exercise-X Exercise-1 "
    ]
   },
   {
@@ -582,7 +597,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp -r Exercise-X Exercise-2 "
+    "%%bash\n",
+    "cp -r Template-Exercise-X Exercise-2"
    ]
   },
   {
@@ -687,8 +703,8 @@
     "  LABEL=mtd\n",
     "  ARG=dist\n",
     "  PACE=500\n",
-    "  SIGMA=0.02\n",
-    "  HEIGHT=1.25\n",
+    "  SIGMA=0.01\n",
+    "  HEIGHT=2.5\n",
     "  BIASFACTOR=5\n",
     "  GRID_MIN=0.0\n",
     "  GRID_MAX=1.0\n",
@@ -783,7 +799,7 @@
    "id": "8dec661b",
    "metadata": {},
    "source": [
-    "We should also look at the height of the added Gaussians, which should decrease as the simulation progresses and go to zero in the long time limit. This is in the 4th column in the `hills.data` file "
+    "We should also look at the height of the added Gaussians, which should decrease as the simulation progresses and go to zero in the long time limit. This is in the 4th column in the `hills.data` file when we have 1 CV. "
    ]
   },
   {
@@ -801,7 +817,9 @@
    "id": "81e4c7cf",
    "metadata": {},
    "source": [
-    "We can obtain the FES from the added Gaussian by using the `sum_hills` command line tool of PLUMED "
+    "We can obtain the FES from the added Gaussian by using the `sum_hills` command line tool of PLUMED, which will sum up the Gaussians. This done with the command below. \n",
+    "\n",
+    "We also get another FES where the minimum has been set to zero by using the `--mintozero` flag, which is convient when comparing results. "
    ]
   },
   {
@@ -1191,7 +1209,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cp -r Exercise-X Exercise-4\n"
+    "cp -r Template-Exercise-X Exercise-4\n"
    ]
   },
   {
@@ -1286,11 +1304,11 @@
     "  LABEL=mtd\n",
     "  ARG=dist,coord\n",
     "  PACE=500\n",
-    "  SIGMA=0.02,0.1 \n",
-    "  HEIGHT=1.25\n",
+    "  SIGMA=0.01,0.1 \n",
+    "  HEIGHT=2.50\n",
     "  BIASFACTOR=5\n",
-    "  GRID_MIN=0.0,2.0\n",
-    "  GRID_MAX=1.0,9.0\n",
+    "  GRID_MIN=0.0,1.0\n",
+    "  GRID_MAX=1.0,10.0\n",
     "  CALC_RCT\n",
     "  FILE=hills.data\n",
     "... METAD\n",
@@ -1308,6 +1326,14 @@
    "source": [
     "%%bash\n",
     "./run.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53b2e3e7",
+   "metadata": {},
+   "source": [
+    "Let's look at the time series of the biased CVs and the hill height. We can see that the Gaussian hill height is in the 6th column in the `hills.data` file when we have 2 CV biased.  "
    ]
   },
   {
@@ -1396,7 +1422,7 @@
     "mkdir fes\n",
     "plumed sum_hills --hills hills.data --mintozero --kt 2.494353 --idw dist --outfile fes/fes.dist.data\n",
     "plumed sum_hills --hills hills.data --mintozero --kt 2.494353 --idw coord --outfile fes/fes.coord.data\n",
-    "plumed sum_hills --hills hills.data --mintozero   --outfile fes/fes.dist-coord.data"
+    "plumed sum_hills --hills hills.data --mintozero  --bin 200,200  --outfile fes/fes.dist-coord.data"
    ]
   },
   {
@@ -1481,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d68fe6e6",
+   "id": "8cb7ff43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,21 +1524,21 @@
    "source": [
     "fes_data = np.loadtxt(\"./fes/fes.dist-coord.data\")\n",
     "# have to change the value in reshape to fit fes file generated by sum_hills\n",
-    "distance = fes_data[:,0].reshape(169,166)\n",
-    "coord =    fes_data[:,1].reshape(169,166)\n",
-    "fes_2d =   fes_data[:,2].reshape(169,166)-np.min(fes_data[:,2].reshape(169,166))\n",
+    "distance = fes_data[:,0].reshape(201,201)\n",
+    "coord =    fes_data[:,1].reshape(201,201)\n",
+    "fes_2d =   fes_data[:,2].reshape(201,201)-np.min(fes_data[:,2].reshape(201,201))\n",
     "from matplotlib import cm\n",
     "plt.contourf(distance,coord,fes_2d/kBT, levels=np.linspace(0,10,101), cmap=cm.jet)\n",
     "plt.xlabel(\"Na-Cl distance [nm]\")\n",
     "plt.ylabel(\"Solvation of Na\")\n",
-    "plt.title(\"FES - Reweighting\")\n",
+    "plt.title(\"FES\")\n",
     "plt.colorbar(label=\"Free Energy [kBT]\", ticks=range(0,11))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a1fc8a1",
+   "id": "a2baae47",
    "metadata": {},
    "outputs": [],
    "source": []
