--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -30,7 +30,38 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "bash /ocean/projects/see220002p/shared/icomse-setup.sh"
+    "# Load modules needed\n",
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6119a367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the PLUMED binary\n",
+    "plumed_bin=\"plumed\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace0ab5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function that helps us run PLUMED commands\n",
+    "def run_plumed_cmd(cmd,verbose=False):\n",
+    "    cmd_str=\"{} \".format(plumed_bin)+cmd\n",
+    "    print(\"PLUMED command: {}\".format(cmd_str))\n",
+    "    if verbose:\n",
+    "        subprocess.run(cmd_str.split())\n",
+    "    else:\n",
+    "        subprocess.run(cmd_str.split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)    "
    ]
   },
   {
@@ -41,6 +72,16 @@
    "outputs": [],
    "source": [
     "plt.rcParams['figure.dpi'] = 500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90454894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills -h\",verbose=True)"
    ]
   },
   {
@@ -57,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975997c2",
+   "id": "5f247441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +663,7 @@
     "cat <<EOF > MD-NPT.mdp\n",
     "integrator = md\n",
     "dt = 0.002\n",
-    "nsteps = 2500000\n",
+    "nsteps = 5000000\n",
     "cutoff-scheme = Verlet\n",
     "coulombtype = PME\n",
     "rlist = 0.6\n",
@@ -704,7 +745,7 @@
     "  ARG=dist\n",
     "  PACE=500\n",
     "  SIGMA=0.01\n",
-    "  HEIGHT=2.5\n",
+    "  HEIGHT=1.25\n",
     "  BIASFACTOR=5\n",
     "  GRID_MIN=0.0\n",
     "  GRID_MAX=1.0\n",
@@ -719,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4903b038",
+   "id": "ab439c65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,14 +866,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd812842",
+   "id": "e5e4da7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "mkdir fes\n",
-    "plumed sum_hills --hills hills.data --outfile fes/fes.data \n",
-    "plumed sum_hills --hills hills.data --mintozero --outfile fes/fes.mintozero.data "
+    "mkdir fes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd812842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills --hills hills.data --outfile fes/fes.data\",verbose=True)\n",
+    "run_plumed_cmd(\"sum_hills --hills hills.data  --mintozero --outfile fes/fes.mintozero.data \",verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c3f107f",
+   "metadata": {},
+   "source": [
+    "The `sum_hills` command line tool has various other option that one sometimes need to use as we can see by running `plumed sum_hills -h`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86e832ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills -h\",verbose=True)"
    ]
   },
   {
@@ -853,10 +921,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fce80507",
+   "id": "019d6c68",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "rm -rf fes-stride-500\n",
+    "mkdir fes-stride-500"
+   ]
   },
   {
    "cell_type": "code",
@@ -865,9 +937,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "mkdir fes-stride-500\n",
-    "plumed sum_hills --hills hills.data --mintozero --stride 500 --outfile fes-stride-500/fes.stride-"
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 500 --outfile fes-stride-500/fes.stride-\")"
    ]
   },
   {
@@ -934,6 +1004,7 @@
     "    distance = fes_data[:,0]\n",
     "    fes = fes_data[:,1]-np.min(fes_data[:,1])\n",
     "    prob = np.exp(-beta*fes)\n",
+    "    prob = prob/np.sum(prob)        \n",
     "    prob_A = 0.0\n",
     "    prob_B = 0.0\n",
     "    for i in range(prob.size):\n",
@@ -948,13 +1019,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb6a0eb",
+   "id": "5245dcd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "mkdir fes-stride-100\n",
-    "plumed sum_hills --hills hills.data --mintozero --stride 100 --outfile fes-stride-100/fes.stride-"
+    "rm -rf fes-stride-10\n",
+    "mkdir fes-stride-10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebb6a0eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 10 --outfile fes-stride-10/fes.stride-\",verbose=False)"
    ]
   },
   {
@@ -966,17 +1047,19 @@
    "source": [
     "fe_time=[]\n",
     "fe_diff=[]\n",
-    "fes_stride=100\n",
-    "for i, f in enumerate(glob.glob(\"fes-stride-100/fes.stride-*\")):\n",
+    "fes_stride=1\n",
+    "num_fesfile=len(glob.glob(\"fes-stride-10/fes.stride-*\"))\n",
+    "for i in range(num_fesfile):  \n",
+    "    if i == num_fesfile-1: continue\n",
     "    time=(i+1)*fes_stride\n",
+    "    fes_file=\"fes-stride-10/fes.stride-{}.dat\".format(i)\n",
     "    fe_time.append(time)\n",
-    "    fe_diff.append(calc_free_energy_difference(f))\n",
-    "\n",
+    "    fe_diff.append(calc_free_energy_difference(fes_file))\n",
     "plt.plot(fe_time,fe_diff)\n",
     "plt.xlabel(\"Time [ps]\")\n",
     "plt.ylabel(\"Free Energy Difference [kBT]\")\n",
     "plt.title(\"Free Energy Difference\")\n",
-    "plt.ylim([-4.0,4.0])\n",
+    "#plt.ylim([-1.0,1.0])\n",
     "\n"
    ]
   },
@@ -1071,7 +1154,7 @@
     "    subprocess.run(\"rm -f fes-reweight/fes-reweight.dist.data\".split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
     "    subprocess.run(\"rm -f fes-reweight/colvar_reweight.data\".split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
     "    subprocess.run(\"./trim-colvar-file.py --colvar-file colvar.data --output-file fes-reweight/colvar_reweight.data --time-min {0}\".format(i).split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
-    "    subprocess.run(\"plumed driver --plumed fes-reweight/plumed_reweight.dat --noatoms\".split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
+    "    run_plumed_cmd(\"driver --plumed fes-reweight/plumed_reweight.dat --noatoms\")\n",
     "    fes_data=np.loadtxt(\"fes-reweight/fes-reweight.dist.data\")\n",
     "    plt.plot(fes_data[:,0],(fes_data[:,1]-np.min(fes_data[:,1]))/kBT,label=\"Trim {} ps\".format(i))\n",
     "    plt.xlabel(\"Na-Cl distance [nm]\")  \n",
@@ -1092,8 +1175,36 @@
    "source": [
     "time_trim=500\n",
     "subprocess.run(\"./trim-colvar-file.py --colvar-file colvar.data --output-file fes-reweight/colvar_reweight.data --time-min {0}\".format(time_trim).split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
-    "subprocess.run(\"plumed driver --plumed fes-reweight/plumed_reweight.dat --noatoms\".split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
+    "run_plumed_cmd(\"driver --plumed fes-reweight/plumed_reweight.dat --noatoms\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7925716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_fes(fes_files,labels=None): \n",
+    "    for i, f in enumerate(fes_files):\n",
+    "        fes_data=np.loadtxt(f)\n",
+    "        cv=fes_data[:,0]\n",
+    "        fes=fes_data[:,1]\n",
+    "        fes = fes - np.min(fes)\n",
+    "        fes = fes/kBT\n",
+    "        if labels:\n",
+    "            label=labels[i]\n",
+    "        else:\n",
+    "            label=f\n",
+    "        plt.plot(cv,fes,'-',label=label)\n",
+    "    plt.xlabel(\"Na-Cl Distance [nm]\")\n",
+    "    plt.ylabel(\"Free Energy [kBT]\")\n",
+    "    plt.legend()\n",
+    "    plt.ylim([0,10])    \n",
+    "    plt.show()\n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -1103,14 +1214,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fes_reweight=np.loadtxt(\"fes-reweight/fes-reweight.dist.data\")\n",
-    "fes_sumhills=np.loadtxt(\"fes/fes.mintozero.data\")\n",
-    "\n",
-    "plt.plot(fes_reweight[:,0],(fes_reweight[:,1]-np.min(fes_reweight[:,1]))/kBT,'-',label=\"Reweighted\")\n",
-    "plt.plot(fes_sumhills[:,0],fes_sumhills[:,1]/kBT,'-',label=\"From bias potential\")\n",
-    "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
-    "plt.ylabel(\"Free Energy [kBT]\")\n",
-    "plt.ylim([0,10])"
+    "fes_files=[\"fes/fes.mintozero.data\",\n",
+    "           \"fes-reweight/fes-reweight.dist.data\"]\n",
+    "labels=[\"FES from bias\",\n",
+    "        \"FES from rewighting\"]\n",
+    "plot_fes(fes_files,labels)"
    ]
   },
   {
@@ -1160,8 +1268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "plumed driver --plumed fes-reweight/plumed_reweight.2D.dat --noatoms &> /dev/null"
+    "run_plumed_cmd(\"driver --plumed fes-reweight/plumed_reweight.2D.dat --noatoms\")\n"
    ]
   },
   {
@@ -1305,7 +1412,7 @@
     "  ARG=dist,coord\n",
     "  PACE=500\n",
     "  SIGMA=0.01,0.1 \n",
-    "  HEIGHT=2.50\n",
+    "  HEIGHT=1.25\n",
     "  BIASFACTOR=5\n",
     "  GRID_MIN=0.0,1.0\n",
     "  GRID_MAX=1.0,10.0\n",
@@ -1330,7 +1437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b2e3e7",
+   "id": "1587f001",
    "metadata": {},
    "source": [
     "Let's look at the time series of the biased CVs and the hill height. We can see that the Gaussian hill height is in the 6th column in the `hills.data` file when we have 2 CV biased.  "
@@ -1353,17 +1460,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff3af762",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "rm -rf fes-stride-1000 \n",
+    "mkdir fes-stride-1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6ae0768f",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "rm -rf fes-stride-1000 \n",
-    "mkdir fes-stride-1000\n",
-    "plumed sum_hills --hills hills.data --mintozero --stride 1000 --kt 2.494353 --idw dist --outfile fes-stride-1000/fes.dist.stride-\n",
-    "plumed sum_hills --hills hills.data --mintozero --stride 1000 --kt 2.494353 --idw coord --outfile fes-stride-1000/fes.coord.stride-"
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 1000 --kt 2.494353 --idw dist --outfile fes-stride-1000/fes.dist.stride-\")\n",
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --stride 1000 --kt 2.494353 --idw coord --outfile fes-stride-1000/fes.coord.stride-\")"
    ]
   },
   {
@@ -1478,7 +1594,7 @@
    "source": [
     "time_trim=500\n",
     "subprocess.run(\"./trim-colvar-file.py --colvar-file colvar.data --output-file fes-reweight/colvar_reweight.data --time-min {0}\".format(time_trim).split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
-    "subprocess.run(\"plumed driver --plumed fes-reweight/plumed_reweight.dat --noatoms\".split(),stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
+    "run_plumed_cmd(\"driver --plumed fes-reweight/plumed_reweight.dat --noatoms\")\n",
     "\n"
    ]
   },
@@ -1489,19 +1605,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fes_reweight_ex2=np.loadtxt(\"../Exercise-2/fes-reweight/fes-reweight.dist.data\")\n",
-    "fes_sumhills_ex2=np.loadtxt(\"../Exercise-2/fes/fes.mintozero.data\")\n",
-    "fes_reweight_ex4=np.loadtxt(\"fes-reweight/fes-reweight.dist.data\")\n",
-    "fes_sumhills_ex4=np.loadtxt(\"fes/fes.dist.data\")\n",
-    "\n",
-    "plt.plot(fes_reweight_ex2[:,0],(fes_reweight_ex2[:,1]-np.min(fes_reweight_ex2[:,1]))/kBT,'-',label=\"Biasing 1 CV - Reweighted\")\n",
-    "plt.plot(fes_sumhills_ex2[:,0],fes_sumhills_ex2[:,1]/kBT,'-',label=\"Biasing 1 CV - From bias potential\")\n",
-    "plt.plot(fes_reweight_ex4[:,0],(fes_reweight_ex4[:,1]-np.min(fes_reweight_ex4[:,1]))/kBT,'-',label=\"Biasing 2 CV - Reweighted\")\n",
-    "plt.plot(fes_sumhills_ex4[:,0],fes_sumhills_ex4[:,1]/kBT,'-',label=\"Biasing 2 CV - From bias potential\")\n",
-    "plt.xlabel(\"Na-Cl Distance [nm]\")\n",
-    "plt.ylabel(\"Free Energy [kBT]\")\n",
-    "plt.ylim([0,10])\n",
-    "plt.legend()"
+    "fes_files=[\"../Exercise-2/fes/fes.mintozero.data\",\n",
+    "           \"../Exercise-2/fes-reweight/fes-reweight.dist.data\",\n",
+    "           \"fes/fes.dist.data\",\n",
+    "           \"fes-reweight/fes-reweight.dist.data\"]\n",
+    "labels=[\"1 CV biased: FES from bias\",\n",
+    "        \"1 CV biased: FES from rewighting\",\n",
+    "        \"2 CV biased: FES from bias\",\n",
+    "        \"2 CV biased: FES from rewighting\"]\n",
+    "plot_fes(fes_files,labels)\n"
    ]
   },
   {
