fixed issues on PSC

--- a/Tuesday/MetaD-Tutorial.ipynb
+++ b/Tuesday/MetaD-Tutorial.ipynb
@@ -25,15 +25,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c10c551e",
+   "id": "a9a0941e",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Load modules needed\n",
-    "module load gromacs/2020.2-cpu\n",
-    "module load plumed\n",
-    "module load openmpi/4.0.5-gcc10.2.0"
+    "module list"
    ]
   },
   {
@@ -44,7 +41,8 @@
    "outputs": [],
    "source": [
     "# define the PLUMED binary\n",
-    "plumed_bin=\"plumed\""
+    "#plumed_bin=\"plumed\"\n",
+    "plumed_bin=\"singularity exec /ocean/projects/see220002p/shared/icomse_cpu.sif plumed\""
    ]
   },
   {
@@ -285,12 +283,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ebe4a01",
+   "id": "f15f104d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "./generate-tpr-file.sh \"NaCl_StartingStructure-1.gro\""
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "# the GMX_BIN variable needs to be changed depending on the GROMACS installation \n",
+    "GMX_BIN=gmx_mpi\n",
+    "StartingGeometry=NaCl_StartingStructure-1.gro\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_BIN}  grompp -f MD-NPT.mdp -c ${StartingGeometry} -p NaCl.top -o ${RunFilename}.tpr  -maxwarn 1"
    ]
   },
   {
@@ -384,14 +390,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45a83ff8",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "17c8b579",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "./run.sh"
+    "%%bash \n",
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "GMX_BIN=\"gmx_mpi\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 4 gmx_mpi mdrun -ntomp 4\"\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat \n",
+    "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9c1182",
+   "metadata": {},
+   "source": [
+    "This run should take a few minutes. \n",
+    "\n",
+    "__Note: On PSC Bridge2, there is no output to the cell above until the job has finished, but you can logon on via ssh and see files there during the run__"
    ]
   },
   {
@@ -696,7 +718,15 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "./generate-tpr-file.sh \"NaCl_StartingStructure-1.gro\""
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "# the GMX_BIN variable needs to be changed depending on the GROMACS installation \n",
+    "GMX_BIN=gmx_mpi\n",
+    "StartingGeometry=NaCl_StartingStructure-1.gro\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_BIN}  grompp -f MD-NPT.mdp -c ${StartingGeometry} -p NaCl.top -o ${RunFilename}.tpr  -maxwarn 1\n"
    ]
   },
   {
@@ -774,8 +804,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "./run.sh"
+    "%%bash \n",
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "GMX_BIN=\"gmx_mpi\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 4 gmx_mpi mdrun -ntomp 4\"\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat \n",
+    "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4250f494",
+   "metadata": {},
+   "source": [
+    "This run should take around 10-15 minutes. \n",
+    "\n",
+    "__Note: On PSC Bridge2, there is no output to the cell above until the job has finished, but you can logon on via ssh and see files there during the run__"
    ]
   },
   {
@@ -1136,7 +1184,7 @@
     "  LABEL=hg_dist\n",
     "... HISTOGRAM\n",
     "\n",
-    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 \n",
+    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 MINTOZERO\n",
     "DUMPGRID GRID=fes_dist FILE=fes-reweight/fes-reweight.dist.data FMT=%24.16e\n",
     "EOF"
    ]
@@ -1256,7 +1304,7 @@
     "  LABEL=hg_dist_coord\n",
     "... HISTOGRAM\n",
     "\n",
-    "fes_dist_coord: CONVERT_TO_FES GRID=hg_dist_coord TEMP=300 \n",
+    "fes_dist_coord: CONVERT_TO_FES GRID=hg_dist_coord TEMP=300 MINTOZERO\n",
     "DUMPGRID GRID=fes_dist_coord FILE=fes-reweight/fes-reweight.dist-coord.data FMT=%24.16e\n",
     "EOF"
    ]
@@ -1373,7 +1421,15 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "./generate-tpr-file.sh NaCl_StartingStructure-1.gro\n"
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "# the GMX_BIN variable needs to be changed depending on the GROMACS installation \n",
+    "GMX_BIN=gmx_mpi\n",
+    "StartingGeometry=NaCl_StartingStructure-1.gro\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_BIN}  grompp -f MD-NPT.mdp -c ${StartingGeometry} -p NaCl.top -o ${RunFilename}.tpr  -maxwarn 1"
    ]
   },
   {
@@ -1431,8 +1487,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "./run.sh"
+    "%%bash \n",
+    "module load gromacs/2020.2-cpu\n",
+    "module load plumed\n",
+    "module load openmpi/4.0.5-gcc10.2.0\n",
+    "\n",
+    "GMX_BIN=\"gmx_mpi\"\n",
+    "GMX_MDRUN_BIN=\"mpirun -np 4 gmx_mpi mdrun -ntomp 4\"\n",
+    "RunFilename=NaCl_NPT-300K\n",
+    "${GMX_MDRUN_BIN}  -deffnm ${RunFilename}   -plumed plumed.dat \n",
+    "echo \"0\" | ${GMX_BIN} trjconv -f ${RunFilename}.xtc -s ${RunFilename}.tpr -pbc whole -o ${RunFilename}.pbc-whole.xtc"
    ]
   },
   {
@@ -1529,16 +1593,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fb4f0e0",
+   "id": "dba72623",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "rm -rf fes\n",
-    "mkdir fes\n",
-    "plumed sum_hills --hills hills.data --mintozero --kt 2.494353 --idw dist --outfile fes/fes.dist.data\n",
-    "plumed sum_hills --hills hills.data --mintozero --kt 2.494353 --idw coord --outfile fes/fes.coord.data\n",
-    "plumed sum_hills --hills hills.data --mintozero  --bin 200,200  --outfile fes/fes.dist-coord.data"
+    "mkdir fes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb4f0e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --kt 2.494353 --idw dist --outfile fes/fes.dist.data\")\n",
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero --kt 2.494353 --idw coord --outfile fes/fes.coord.data\")\n",
+    "run_plumed_cmd(\"sum_hills --hills hills.data --mintozero  --bin 200,200  --outfile fes/fes.dist-coord.data\")"
    ]
   },
   {
@@ -1580,7 +1653,7 @@
     "  LABEL=hg_dist\n",
     "... HISTOGRAM\n",
     "\n",
-    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 \n",
+    "fes_dist: CONVERT_TO_FES GRID=hg_dist TEMP=300 MINTOZERO\n",
     "DUMPGRID GRID=fes_dist FILE=fes-reweight/fes-reweight.dist.data FMT=%24.16e\n",
     "EOF"
    ]
@@ -1672,7 +1745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
